// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select examples DefaultSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-select-field"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input"
        id="default-select-field"
        v-select=""
      >
        <option
          hidden=""
        />
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Select examples DisabledSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="disabled-select-field"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        aria-describedby="disabled-inline-message"
        class="v-input"
        disabled=""
        id="disabled-select-field"
        v-select=""
      >
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
    <span
      class="v-input-message"
      id="disabled-inline-message"
      v-input-message=""
    >
      This is optional text that describes the label in more detail.
    </span>
  </div>
  <div
    class="v-input-container"
    v-input-container=""
  >
    <input
      checked="checked"
      class="v-checkbox"
      id="disabled-select-field-checkbox"
      type="checkbox"
      v-checkbox=""
      value="checkbox-value"
    />
    <label
      class="v-label"
      for="disabled-select-field-checkbox"
      id="a-v-label-1"
      v-label=""
    >
      Label
    </label>
    
  </div>
</div>
`;

exports[`Select examples ErrorSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="invalid-select"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        aria-describedby="error-message"
        aria-invalid="false"
        class="v-input"
        id="invalid-select"
        required=""
        v-select=""
      >
        <option
          hidden=""
        />
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="v-input-message"
      id="error-message"
      v-input-message=""
    >
      
    </span>
  </div>
  <div
    class="v-gap-16 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="16"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Submit
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Select examples InitialValueSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="initial-select"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input"
        id="initial-select"
        v-select=""
        value="2"
      >
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Select examples MockDataSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="mock-data-select"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        aria-describedby="mock-data-message"
        class="v-input"
        id="mock-data-select"
        v-select=""
      >
        
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
    <span
      class="v-input-message"
      id="mock-data-message"
      v-input-message=""
    >
      This is optional text that describes the label in more detail.
    </span>
  </div>
  <div
    class="v-gap-4 v-flex v-flex-row v-mt-8"
    vflex=""
    vgap="4"
    vmt="8"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Change data
    </button>
  </div>
</div>
`;

exports[`Select examples ModelDrivenFbSelectComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-invalid v-gap-16 v-flex v-flex-col"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-fb-select-1"
        id="a-v-label-0"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="model-fb-select-message-1"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          formcontrolname="input1"
          id="model-fb-select-1"
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-select-message-1"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-fb-select-2"
        id="a-v-label-1"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="model-fb-select-message-2"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          formcontrolname="input2"
          id="model-fb-select-2"
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <v-icon-visa-toggle
            class="v-icon v-icon-tiny"
            style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
          >
            
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-chevron-down-tiny=""
              v-toggle-default-template=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
            
          </v-icon-visa-toggle>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-select-message-2"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-fb-select-3"
        id="a-v-label-2"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="model-fb-select-message-3"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          formcontrolname="input3"
          id="model-fb-select-3"
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <v-icon-visa-toggle
            class="v-icon v-icon-tiny"
            style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
          >
            
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-chevron-down-tiny=""
              v-toggle-default-template=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
            
          </v-icon-visa-toggle>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-select-message-3"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-8"
      vflex=""
      vgap="16"
      vmt="8"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
</div>
`;

exports[`Select examples ModelDrivenFormSelectComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-invalid v-gap-16 v-flex v-flex-col"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-select-1"
        id="a-v-label-0"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="model-select-message-1"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="model-select-1"
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-select-message-1"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-select-2"
        id="a-v-label-1"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="model-select-message-2"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine"
          disabled=""
          id="model-select-2"
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-select-message-2"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-select-3"
        id="a-v-label-2"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="model-select-message-3"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="model-select-3"
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-select-message-3"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-8"
      vflex=""
      vgap="16"
      vmt="8"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
</div>
`;

exports[`Select examples ModelDrivenObjectSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="model-driven-object-select"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input ng-untouched ng-pristine ng-valid"
        id="model-driven-object-select"
        v-select=""
      >
        <option
          value="0: Object"
        >
          United States
        </option>
        <option
          value="1: Object"
        >
          Australia
        </option>
        <option
          value="2: Object"
        >
          Canada
        </option>
        <option
          value="3: Object"
        >
          Brazil
        </option>
        <option
          value="4: Object"
        >
          England
        </option>
        
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
  <button
    class="v-button v-my-8"
    type="button"
    v-button=""
    vmy="8"
  >
    Reset initial value
  </button>
  <code
    class="v-mt-16"
    vmt="16"
  >
    object.value.value: 5
  </code>
  <code>
    object.value.value: England
  </code>
  
</div>
`;

exports[`Select examples ModelDrivenSelectComponent should render correctly 1`] = `
<div>
  <div
    aria-labelledby="model-input-label"
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="model-input"
      id="model-input-label"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input ng-untouched ng-pristine ng-valid"
        id="model-input"
        v-select=""
      >
        <option
          hidden=""
        />
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
  <code>
    selectFormControl.value: 3
  </code>
</div>
`;

exports[`Select examples ReadOnlySelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="read-only-select-field"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input"
        id="read-only-select-field"
        readonly=""
        v-select=""
      >
        <option
          hidden=""
        />
        <option
          disabled=""
          value=""
        />
        <option
          disabled=""
          selected=""
          value="1"
        >
          Option
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Select examples ReusableSelectDemo should render correctly 1`] = `
<div>
  <div
    class="v-gap-6 v-flex v-flex-col v-mt-24"
    vflexcol=""
    vgap="6"
    vmt="24"
  >
    <nova-reusable-select>
      <div
        class="v-gap-4 v-flex v-flex-col v-flex-wrap"
        vflex=""
        vflexwrap=""
        vgap="4"
      >
        <label
          class="v-label"
          for="a-reusable-select-0-select"
          id="a-reusable-select-0-label"
          v-label=""
        >
           Label  
        </label>
        <div
          class="v-input-container v-surface"
          style="--v-surface-inline-size: inherit;"
          v-input-container=""
        >
          <select
            aria-describedby="a-reusable-select-0-message"
            aria-invalid="false"
            class="v-input"
            id="a-reusable-select-0-select"
            v-select=""
          >
            <option
              hidden=""
            />
            <option
              value="1"
            >
               Option 1 
            </option>
            <option
              value="2"
            >
               Option 2 
            </option>
            <option
              value="3"
            >
               Option 3 
            </option>
            <option
              value="4"
            >
               Option 4 
            </option>
            <option
              value="5"
            >
               Option 5 
            </option>
            
          </select>
          <div
            class="v-input-control"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-chevron-down-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </div>
          
        </div>
        <span
          aria-atomic="false"
          class="v-input-message v-align-items-center v-flex v-flex-row"
          id="a-reusable-select-0-message"
          v-input-message=""
          valignitemscenter=""
          vflex=""
        >
          
           This is optional text that describes the label in more detail. 
          
        </span>
      </div>
    </nova-reusable-select>
  </div>
  
  <nova-dynamic-reusable-form
    class="nova-dynamic-reusable-form"
  >
    <div
      class="v-panel v-ml-auto v-panel-expandable v-panel-responsive"
      responsive=""
      style="inline-size: 100%;"
      v-panel=""
      vml="auto"
    >
      <button
        aria-controls="responsive-expanded-panel"
        aria-expanded="true"
        aria-label="Customize demo panel"
        buttonsize="large"
        class="v-button v-panel-toggle v-sm-media-hide v-xs-media-hide v-button-icon v-button-large"
        type="button"
        v-button-icon=""
        v-panel-toggle=""
      >
        <svg
          aria-hidden="true"
          class="v-icon-two-color v-icon v-icon-media-fast-forward v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="--v-icon-secondary: var(--palette-default-active-accent);"
          v-icon-two-color=""
          v-icon-visa-media-fast-forward-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
          />
          <path
            class="v-icon-primary"
            d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
          />
        </svg>
        
        
      </button>
      <div
        aria-hidden="false"
        class="v-panel-content v-surface v-flex v-flex-col"
        id="responsive-expanded-panel"
        v-panel-content=""
        vflex=""
        vflexcol=""
      >
        <header
          class="v-gap-4 v-flex v-flex-row v-justify-content-between"
          vflex=""
          vgap="4"
          vjustifycontentbetween=""
        >
          <h3
            class="v-typography-headline-4"
            vtypography="headline-4"
          >
            Customize demo
          </h3>
          <button
            aria-label="Close customize demo panel"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-desktop-media-hide v-button-icon v-button-small v-button-subtle v-button-tertiary"
            subtle=""
            type="button"
            v-button-icon=""
            vmediahide="desktop"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-close v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-close-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </header>
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative v-flex-shrink-0 v-mb-20 v-mx-8"
          dividertype="decorative"
          v-divider=""
          vflexshrink0=""
          vmb="20"
          vmx="8"
        />
        <div
          class="v-panel-body v-flex v-flex-grow v-flex-row"
          v-panel-body=""
          vflex=""
          vflexgrow=""
        >
          <form
            class="v-gap-16 v-flex v-flex-col ng-untouched ng-pristine ng-valid"
            novalidate=""
            vflex=""
            vflexcol=""
            vgap="16"
          >
            <div
              class="reusable-form-field-wrapper v-gap-48 v-flex v-flex-row v-mb-32"
              vflex=""
              vgap="48"
              vmb="32"
            >
              <div
                class="v-gap-16 v-flex v-flex-col"
                style="inline-size: max-content;"
                vflex=""
                vflexcol=""
                vgap="16"
              >
                <h4
                  class="v-typography-subtitle-2"
                  vtypography="subtitle-2"
                >
                  Boolean properties
                </h4>
                <div
                  class="v-gap-16 v-flex v-flex-col v-flex-wrap"
                  vflex=""
                  vflexcol=""
                  vflexwrap=""
                  vgap="16"
                >
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="disabled"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="disabled"
                          id="a-v-label-1"
                          v-label=""
                        >
                          Disabled
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="inline"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="inline"
                          id="a-v-label-2"
                          v-label=""
                        >
                          Inline
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="invalid"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="invalid"
                          id="a-v-label-3"
                          v-label=""
                        >
                          Invalid
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="readonly"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="readonly"
                          id="a-v-label-4"
                          v-label=""
                        >
                          Readonly
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="required"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="required"
                          id="a-v-label-5"
                          v-label=""
                        >
                          Required
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  
                </div>
              </div>
              <div
                class="v-gap-16 v-flex v-flex-col"
                style="inline-size: max-content;"
                vflex=""
                vflexcol=""
                vgap="16"
              >
                <h4
                  class="v-typography-subtitle-2"
                  vtypography="subtitle-2"
                >
                  Text/numeric properties
                </h4>
                <div
                  class="v-gap-16 v-flex v-flex-col v-flex-wrap"
                  vflex=""
                  vflexcol=""
                  vflexwrap=""
                  vgap="16"
                >
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <label
                      class="v-label"
                      for="label"
                      id="a-v-label-6"
                      v-label=""
                    >
                      Label
                    </label>
                    <div
                      class="v-input-container v-surface"
                      v-input-container=""
                    >
                      <textarea
                        cdktextareaautosize=""
                        class="v-input cdk-textarea-autosize ng-untouched ng-pristine ng-valid"
                        id="label"
                        rows="1"
                        style="max-block-size: 200px;"
                        v-input=""
                        value="Label"
                      />
                      
                    </div>
                    
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <label
                      class="v-label"
                      for="message"
                      id="a-v-label-7"
                      v-label=""
                    >
                      Message
                    </label>
                    <div
                      class="v-input-container v-surface"
                      v-input-container=""
                    >
                      <textarea
                        cdktextareaautosize=""
                        class="v-input cdk-textarea-autosize ng-untouched ng-pristine ng-valid"
                        id="message"
                        rows="1"
                        style="max-block-size: 200px;"
                        v-input=""
                        value="This is optional text that describes the label in more detail."
                      />
                      
                    </div>
                    
                  </div>
                  
                  
                  
                  
                </div>
              </div>
              
            </div>
            <div
              class="reusable-form-field-wrapper v-gap-48 v-flex v-flex-col v-mb-32"
              vflex=""
              vflexcol=""
              vgap="48"
              vmb="32"
            >
              <div
                class="v-gap-4 v-flex v-flex-col v-flex-grow"
                vflex=""
                vflexcol=""
                vflexgrow=""
                vgap="4"
              >
                <label
                  class="v-label"
                  for="options"
                  id="a-v-label-8"
                  v-label=""
                >
                  Options (JSON)
                </label>
                <div
                  class="v-input-container v-surface"
                  v-input-container=""
                >
                  <textarea
                    aria-describedby="options-help"
                    cdktextareaautosize=""
                    class="v-input cdk-textarea-autosize ng-untouched ng-pristine ng-valid"
                    id="options"
                    rows="1"
                    style="max-block-size: 200px;"
                    v-input=""
                    value="[
  {
    "label": "Option 1",
    "value": 1
  },
  {
    "label": "Option 2",
    "value": 2
  },
  {
    "label": "Option 3",
    "value": 3
  },
  {
    "label": "Option 4",
    "value": 4
  },
  {
    "label": "Option 5",
    "value": 5
  }
]"
                  />
                  
                </div>
                <span
                  class="v-input-message"
                  id="options-help"
                  v-input-message=""
                >
                  Edit the JSON array of options. Each option should have "label" and "value" properties.
                </span>
                
              </div>
              
            </div>
            
            <div
              class="v-gap-16 v-flex v-flex-row v-mb-16 v-ml-auto"
              vflex=""
              vgap="16"
              vmb="16"
              vml="auto"
            >
              <button
                class="v-button"
                type="submit"
                v-button=""
              >
                Apply
              </button>
              <button
                buttoncolor="secondary"
                class="v-button v-button-secondary"
                type="button"
                v-button=""
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </nova-dynamic-reusable-form>
</div>
`;

exports[`Select examples TemplateDrivenFormSelectComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-valid v-gap-16 v-flex v-flex-col"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="template-select-1"
        id="a-v-label-0"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="template-select-message-1"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-valid"
          id="template-select-1"
          name="template1"
          ngmodel=""
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="template-select-message-1"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="template-select-2"
        id="a-v-label-1"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="template-select-message-2"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-valid"
          id="template-select-2"
          name="template2"
          ngmodel=""
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="template-select-message-2"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="template-select-3"
        id="a-v-label-2"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <select
          aria-describedby="template-select-message-3"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-valid"
          id="template-select-3"
          name="template3"
          ngmodel=""
          required=""
          v-select=""
        >
          <option
            hidden=""
          />
          <option
            value="1"
          >
            Option A
          </option>
          <option
            value="2"
          >
            Option B
          </option>
          <option
            value="3"
          >
            Option C
          </option>
          <option
            value="4"
          >
            Option D
          </option>
          <option
            value="5"
          >
            Option E
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="template-select-message-3"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row"
      vflex=""
      vgap="16"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
</div>
`;

exports[`Select examples TemplateDrivenObjectSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="template-object-select"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input ng-untouched ng-pristine ng-valid"
        id="template-object-select"
        name="templateNameObject"
        v-select=""
      >
        <option
          value="0: Object"
        >
          United States
        </option>
        <option
          value="1: Object"
        >
          Australia
        </option>
        <option
          value="2: Object"
        >
          Canada
        </option>
        <option
          value="3: Object"
        >
          Brazil
        </option>
        <option
          value="4: Object"
        >
          England
        </option>
        
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
  <button
    class="v-button v-my-8"
    type="button"
    v-button=""
    vmy="8"
  >
    Reset initial value
  </button>
  <code>
    templateValueControl.value.value: null
  </code>
  <code>
    templateValueControl.value.label: null
  </code>
</div>
`;

exports[`Select examples TemplateDrivenSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="template-select"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input ng-untouched ng-pristine ng-valid"
        id="template-select"
        v-select=""
      >
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
  <code>
    selectVal: 2
  </code>
</div>
`;

exports[`Select examples WithInlineLabelSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-row"
    vflex=""
    vgap="4"
  >
    <label
      class="v-label"
      for="inline-select"
      id="inline-select-label"
      style="line-height: var(--v-input-container-block-size); text-wrap: nowrap;"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        class="v-input"
        id="inline-select"
        v-select=""
      >
        <option
          hidden=""
        />
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Select examples WithInlineMessageSelectComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col v-flex-grow"
    vflex=""
    vflexcol=""
    vflexgrow=""
    vgap="4"
  >
    <label
      class="v-label"
      for="inline-select-with-message"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <select
        aria-describedby="inline-message"
        class="v-input"
        id="inline-select-with-message"
        v-select=""
      >
        <option
          hidden=""
        />
        <option
          value="1"
        >
          Option A
        </option>
        <option
          value="2"
        >
          Option B
        </option>
        <option
          value="3"
        >
          Option C
        </option>
        <option
          value="4"
        >
          Option D
        </option>
        <option
          value="5"
        >
          Option E
        </option>
      </select>
      <div
        class="v-input-control"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
      </div>
      
    </div>
    <span
      class="v-input-message"
      id="inline-message"
      v-input-message=""
    >
      This is optional text that describes the label in more detail.
    </span>
  </div>
</div>
`;
